singletons-base/tests/compile-and-dump/Singletons/T480.golden

Singletons/T480.hs:0:0: error: Q monad failure
  |
5 | $(singletons
  |  ^^^^^^^^^^^...

Singletons/T480.hs:0:0: error:
    `singletons-th` does not support wildcard types
	unless they appear in visible type patterns of data constructors
	In the type: _

  |
5 | $(singletons
  |  ^^^^^^^^^^^...
